[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/titan_story/TitanStoryDock/TitanStoryDock.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 896.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBar" type="HBoxContainer" parent="."]
margin_right = 1023.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNode" type="Button" parent="ButtonBar"]
margin_right = 75.0
margin_bottom = 43.0
text = "Add Node"

[node name="Button2" type="Button" parent="ButtonBar"]
margin_left = 79.0
margin_right = 91.0
margin_bottom = 43.0

[node name="Button3" type="Button" parent="ButtonBar"]
margin_left = 95.0
margin_right = 107.0
margin_bottom = 43.0

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
margin_right = -7.00012
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonBar/AddNode" to="." method="_on_AddNode_pressed"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
